--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Home Section -->
     <section class="home" id="home">
       <div class="profile-content">
-        <h1>I am Saravanan   <span style="color:  #006400;" id="typing-text"></span></h1>
+        <h1>I am Saravanan <span style="color:  #006400;" id="typing-text"></span></h1>
         <p>
           Hi, I’m Saravanan, a passionate Full-Stack Python Developer with a
           love for building dynamic and efficient web applications. With a
@@ -68,29 +68,31 @@
     </section>
     <!-- Project Section -->
     <section id="project" class="project">
-      <h2 class="title">Project</h2>
-      <div class="content">
-        <div class="box" data-aos="flip-left">
-          <h3>STSUIOT</h3>
-          <p>
-            A Smart Transportation System (STS) using the Internet of Things (IoT) leverages interconnected devices,
-            sensors, and data analytics to optimize the efficiency, safety, and sustainability of transportation
-            networks. By embedding IoT-enabled devices in vehicles, infrastructure, and roads, real-time data such as
-            traffic flow, vehicle speed, and road conditions can be collected and analyzed.
-          </p>
-        </div>
-        <div class="box" data-aos="flip-left">
-          <h3>DVURJS</h3>
-          <p>
-            A Data Visualization Admin Dashboard using React.js provides an interactive and dynamic interface for
-            monitoring and managing real-time data across various systems. Built with React.js, this dashboard leverages
-            its component-based architecture to create reusable and maintainable UI elements. It integrates data from
-            multiple sources, presenting it through interactive charts, graphs, and tables using libraries such as
-            Chart.js, D3.js, or Recharts for rich visualizations.
-          </p>
-        </div>
-      </div>
-    </section>
+  <h2 class="title">Project</h2>
+  <div class="content">
+    <div class="box" data-aos="flip-left">
+      <h3>STSUIOT</h3>
+      <p>
+        A Smart Transportation System (STS) using the Internet of Things (IoT) leverages interconnected devices,
+        sensors, and data analytics to optimize the efficiency, safety, and sustainability of transportation
+        networks. By embedding IoT-enabled devices in vehicles, infrastructure, and roads, real-time data such as
+        traffic flow, vehicle speed, and road conditions can be collected and analyzed.
+      </p>
+    </div>
+    <div class="box" data-aos="flip-left">
+      <h3>Task Manager App</h3>
+      <p>
+        A full-stack Task Manager web application built using the MERN stack (MongoDB, Express.js, React.js, and
+        Node.js). This app allows users to create, update, delete, and track tasks efficiently with real-time UI
+        updates. It includes user authentication, role-based access (Admin/User), and persistent task storage using
+        MongoDB. Designed with responsive UI for seamless use across devices.
+      </p>
+      <button class="btn"><a href="https://dc6fad7b.taskmanager-1ff.pages.dev/login" target="_blank">View</a></button>
+    </div>
+  </div>
+</section>
+ 
+   
     <section class="skills" id="skills">
       <h2 class="title">Skills</h2>
       <div class="content">
@@ -233,7 +235,7 @@
 
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
-  
+
   <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 
   <script>
@@ -244,17 +246,17 @@
       easing: 'ease-in-out',
     });
   </script>
-    <script>
-      var typed = new Typed('#typing-text', {
-        strings: ['Fullstack Python Developer', ' Frontend Developer', 'React js Developer', 'Software Developer'],
-        typeSpeed: 100,
-        backspeed:100,
-        backdelay:500,
-        startdelay:750,
-        loop:true,
-      });
-    </script>
-  
+  <script>
+    var typed = new Typed('#typing-text', {
+      strings: ['Fullstack Python Developer', ' Frontend Developer', 'React js Developer', 'Software Developer'],
+      typeSpeed: 100,
+      backspeed: 100,
+      backdelay: 500,
+      startdelay: 750,
+      loop: true,
+    });
+  </script>
+
 </body>
 
 </html>
