--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
           </div>
         </div>
         <div class="box" data-aos="zoom-in">
-          <h3>C</h3>
+          <h3>GitHub</h3>
           <div class="icon">
-            <i class="fa-brands fa-c" style="color: #A8B9CC "></i>
+            <i class="fa-brands fa-github" style="color: #bd2c00"></i>
           </div>
         </div>
       </div>
